Front end work in progress
Joe this is the progress as far as the front end is concerned.

--- a/consultancy-website-template/html/about.html
+++ b/consultancy-website-template/html/about.html
@@ -90,57 +90,13 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">About Us</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="../index.html">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="">About</a>
             </div>
         </div>
     </div>
-    <section class="ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-    	<div class="container">
-				<div class="row">
-          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 d-flex">
-              <div class="text d-flex align-items-center">
-                <strong class="number" data-number="30">0</strong>
-              </div>
-              <div class="text-2">
-              	<span>Years of <br>Experienced</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 d-flex">
-              <div class="text d-flex align-items-center">
-                <strong class="number" data-number="1500">0</strong>
-              </div>
-              <div class="text-2">
-              	<span>Project <br>Successful</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 d-flex">
-              <div class="text d-flex align-items-center">
-                <strong class="number" data-number="100">0</strong>
-              </div>
-              <div class="text-2">
-              	<span>Professional <br>Expert</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 d-flex">
-              <div class="text d-flex align-items-center">
-                <strong class="number" data-number="300">0</strong>
-              </div>
-              <div class="text-2">
-              	<span>Happy <br>Customers</span>
-              </div>
-            </div>
-          </div>
-        </div>
-    	</div>
     <!-- Page Header End -->
 
 
