--- a/consultancy-website-template/html/service.html
+++ b/consultancy-website-template/html/service.html
@@ -107,8 +107,9 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Our Services</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="../index.html">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="">Services</a>
             </div>
         </div>
@@ -134,9 +135,9 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                         <i class="fa -chart-pie fa-2x"></i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h5 class="mb-3">Web design and Development</h5>
+                    <h5 class="mb-3">Business & Technology Advisory</h5>
                     <p class="mb-0">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices.</p>
-                    <a href="../html/services/web-design-and-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <a href="../html/services/Business-&-technology-Advisory.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -144,19 +145,19 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                         <i class="fa -chart-line fa-2x"></i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h5 class="mb-3">Digital Marketing</h5>
+                    <h5 class="mb-3">Organizational Change Management</h5>
+                    <p class="mb-0">New or improved technology is meaningless unless it is accepted by an organization's employees. We assist customers in overcoming change resistance, mapping out future roles and duties, and ensuring a smooth transition.</p>
+                    <a href="../html/services/organisational-change-management.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-secondary text-center px-3">
+                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <i</i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
+                    </div>
+                    <h5 class="mb-3">digital-marketing</h5>
                     <p class="mb-0">We specialize in designing and launch targeted Facebook, LinkedIn, Instagram, or Google ads, using an allocated Ads Budget, for increased engagement and a larger following, as and when the client advises, upon mutual agreement of the budget to be spent for such paid marketing.</p>
                     <a href="../html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
-                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i class="fa -chart-line fa-2x"></i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
-                    </div>
-                    <h5 class="mb-3">Animation & 3D Product Designing</h5>
-                    <p class="mb-0">We design 3D designs with three-dimensional models based on a client's specifications and requirements. Animation as service is ideal for businesses of all sizes, from startups to well-established companies. We specialize in animation video services and offer high-quality illustrations for all your marketing and social media necessities.</p>
-                    <a href="../html/services/animation-and-3d-product.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -177,16 +178,6 @@
                     <h5 class="mb-3">IT Consulting</h5>
                     <p class="mb-0">Our strategic IT consulting will help you automate and digitalize operations, optimize the software portfolio, and implement the latest technologies.</p>
                     <a href="../html/services/it-consulting.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
-                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i</i><img class="w-100" src="../img/Marytech Logo_Red-03.png" alt="Image">
-                    </div>
-                    <h5 class="mb-3">Search Engine Optimization (SEO)</h5>
-                    <p class="mb-0">Get your website ranking higher in the search results, earn more qualified organic traffic and increase your website users. With our managed SEO services we offer On-Page and Off-Site customisable search engine optimisation campaigns that include a real-time dashboard so you can see the growth of your website.</p>
-                    <a href="../html/services/search-engine-optimization.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
         </div>
@@ -236,7 +227,7 @@
             </div>
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="../img/quote.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="../img/woman.png" style="object-fit: cover;">
                 </div>
             </div>
         </div>
