--- a/consultancy-website-template/html/services/digital-transformation-services/software-selection.html
+++ b/consultancy-website-template/html/services/digital-transformation-services/software-selection.html
@@ -90,10 +90,11 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Digital Transformation Services</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="./digital-strategy.html">Digital Strategy</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="./software-selection.html">Software Selection</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="./software-implemetation.html">Software Implementation</a>
             </div>
         </div>
@@ -101,13 +102,118 @@
     <!-- Page Header End -->
 
     <!-- Digital marketing information start-->
-    <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
+    <!-- <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
         SOFTWARE SELECTION INFO HERE... <br>
         <a href="../digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To Digital Transformation Services</a>
         <a href="../../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br>
-    </div>
+    </div> -->
     <!-- Digital marketing information end-->
+    <!-- Quote Start -->
+<div class="container-fluid bg-secondary px-0" id="quote-form">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Software-Selection</h1>
+            <p class="mb-4"> Choosing the right software is a journey. At Marytechenock Solution, we help your organisation select the best software. Unlike big-box consulting agencies, we don’t sell software. We simply help clients select the best ERP, CRM, HCM, WMS, or emerging technology solutions based on our extensive experience with various technologies matched with the distinct characteristics of each client. We guide organisations across all industries to find the best fit for their unique operational needs.</p>
+        </div>
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/what 3.jpg" style="object-fit: cover;">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid bg-secondary px-0" id="quote-form" style="margin-top: 30px;">
+    <div class="row g-0">
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/one.png" style="object-fit: cover;">
+            </div>
+        </div>
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">The Selection Process, Simplified</h1>
+            <p class="mb-4">Our proprietary database allows us to analyze vendors that meet our clients’ business requirements to streamline the selection process. We also provide the following services to make each client’s selection experience as pain-free as possible.
+                <h5 class="text-black text-lower Case"></h5> Evaluation & Requirements
 
+                Business & Functionality 
+                We help clients nail down their must-haves and deal-breaker requirements to narrow the pool.
+                Realistic Goals
+                We’ll conduct implementation planning to develop a realistic budget and rollout plan.
+                Best-Fit Solutions
+                Our experts identify the best technologies to support our clients’ people, processes, and culture.</p>
+        </div>
+        
+    </div>
+</div>
+<div class="container-fluid bg-secondary px-0" id="quote-form">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">What We’ll Handle</h1>
+            <p class="mb-4">Negotiations with Vendors We speak the language and can see through sparkly sales pitches to understand a vendor’s offerings and capabilities.<h5 class="text-black text-lower Case"></h5>Software Workshops
+                We join our clients during software demos to evaluate whether the solutions meet their requirements.<h5 class="text-black text-lower Case"></h5>Guiding the Transition Consider us a resource, from the first brainstorm session to a successful go live and beyond.</p>
+        </div>
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/what 3.jpg" style="object-fit: cover;">
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="col-lg-6">
+    <div class="left-ab">
+        <img class="img-fluid rounded mb-4" src="images/mission-img.jpg" alt="" />
+    </div>
+</div>
+</div>
+        <!-- Quote Start -->
+<div class="container-fluid bg-secondary px-0" id="quote-form" style="margin-top: 60px;">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Request A Free Quote</h1>
+            <p class="mb-4">MARYTECHENOCK SOLUTIONS is an all-in-one technology partner that can help you transform even the most ambitious IT goals into game-changing outcomes. So go ahead. Be ambitious. Do you need guidance on which service model to go for? 
+Get a free consultation from one of our in-house experts to learn the most suitable solution for your business needs.</p>
+            <form>
+                <div class="row gx-3">
+                    <div class="col-6">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
+                            <label for="form-floating-1">Full Name</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
+                            <label for="form-floating-2">Email address</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-floating">
+                            <select class="form-select" id="floatingSelect" aria-label="">
+                                <option selected>Digital Transformation Service</option>
+                                <option value="1">Business & Technology Advisory</option>
+                                <option value="2">Organizational Change Management</option>
+                                <option value="3">Digital Marketing</option>
+                                <option value="4">Animation & 3D Product Designing</option>
+                                <option value="5">Mobile and web Application developments</option>
+                                <option value="6">IT CONSULTING SERVICES </option>  
+                            </select>
+                            <label for="floatingSelect">Select A Service</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary w-100 h-100" type="submit">Request A Free Quote</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/quotes.jpg" style="object-fit: cover;">
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Quote End -->
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
         <div class="row g-5">
