--- a/consultancy-website-template/html/services/digital-transformation.html
+++ b/consultancy-website-template/html/services/digital-transformation.html
@@ -90,27 +90,41 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Digital Transformation Services</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="digital-marketing.html">Digital Marketing</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="web-design-and-dev.html">Web Design and Development</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="animation-and-3d-product.html">Animation and 3D Product Designing</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
+                <a href="organisational-change-management.html">organisational-change-management</a>
+                <i class="far fa-award text-primary px-2"></i>
+                <a href="Business-&-technology-Advisory.html">Business-&-technology-Advisory</a>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="mobile-and-web-app-dev.html">Mobile and Web Application Development</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="it-consulting.html">IT Consulting</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="search-engine-optimization.html">Search Engine Optimization</a>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
     <!-- Digital transformation information start-->
-    <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
-        <h5 class="text-black text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
-                            <h1 class="align-text-center display-1 text-black mb-md-4 ">Lets Build Your Dream Together</h1>
-                            <p data-animation="fadeInUp" data-delay="">At MARYTECHENOCK SOLUTION, we look beyond technology to take a holistic view of every aspect of a client’s business. We take into consideration our client’s internal structure, culture, current technology, and methods of business, and we advise them on whether a new digital infrastructure is the best way to achieve their goals.</p>
+    <div class="container-fluid p-0">
+        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner" style="height:400px;">
+                <div class="carousel-item active carousel-max-height">
+                    <img class="w-100" src="../../img/bg4.png" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center" style="margin-bottom: 100px;">
+                        <div class="p-3" style="max-width: 1100px; margin-bottom: 400px;">
+                            <h5 class="text-white text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
+                            <h4 class="align-text-center display-1 text-black mb-md-4" style="text-align: center; color: aliceblue; font-size: 50px;">Lets Build Your Dream Together</h4>
+                            <p data-animation="fadeInUp" data-delay="" style="text-align: center;">At MARYTECHENOCK SOLUTION, we look beyond technology to take a holistic view of every aspect of a client’s business. <br/><br/> We take into consideration our client’s internal structure, culture, current technology, and methods of business,<br/>  and we advise them on whether a new digital infrastructure is the best way to achieve their goals.</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid pt-6 px-5" style="min-height: 500px; text-align: center;">
+       
                             <div class="row g-5">
                                 <div class="col-lg-4 col-md-6">
                                     <div class="service-item bg-secondary text-center px-3">
@@ -118,7 +132,7 @@
                                             <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
                                         </div>
                                         <h5 class="mb-3">Digital Strategy</h5>
-                                        <p class="mb-0">As business Analyst we develop strategic roadmaps tailored to our client's people, processes, and technology. MARYTECHENOCK SOLUTIONS can help your organisation come up with a robust <h5 class="text-black text-uppercase">Business Case</h5>for your IT investment.</p>
+                                        <p class="mb-0">We develop strategic roadmaps tailored to our clients’ people, processes, and technology.</p>                           
                                         <a href="./digital-transformation-services/digital-strategy.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                                     </div>
                                 </div>
@@ -142,10 +156,15 @@
                                         <a href="./digital-transformation-services/software-implemetation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                                     </div>
                                 </div>
-                            <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br> 
+                                <div style="display: flex; justify-content: end; margin-bottom: 5px; ">
+                                    <button class="btn btn-primary rounded-pill"  style="width:100px; height: 100px; text-align: center;">
+
+                                        <a href="../service.html" class="" style="color: aliceblue;">Services</a>
+                                    </button>
+                                </div>
                         </div>
                     </div>
-                </div>
+    </div>
     <!-- Digital transformation end here information end-->
 
     <!-- Footer Start -->
