--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -45,7 +45,7 @@
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@marytechenock Solutions.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@marytechenock.com</p>
                     </div>
                     <div class="py-2">
                         <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+263 788 684 321</p>
@@ -109,7 +109,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1100px;">
                             <h5 class="text-white text-uppercase">MARYTECHENOCK SOLUTIONS CONSULTANCY</h5>
-                            <h1 class="display-1 text-white mb-md-4">Your Leading Global Digital Transformation Expert </h1>
+                            <h1 class="display-1 text-white mb-md-4">Your Leading Digital Transformation Expert in Africa</h1>
                             <p data-animation="fadeInUp" data-delay="">We understand that navigating into todays technology climate can be bit frustrating, especially within the digital transformation industry and key distinction required for it to be successful.
                             MARYTECHENOCK SOLUTIONS serves as an technology-agnostic advisor and collaborative partner to our client community. We provide unparallel industry expertise and proven methodologies to optimize any technology transformation and maximize business value. </p>
                             <a href="#quote-form" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get A Free Quote</a>
@@ -185,8 +185,11 @@
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
+            <div style="position: absolute; z-index: -20;  margin-left:-25px; margin-bottom: 35px;">
+                <img src="./img/bee.png" alt="Image" style="height:885px; width:100%;">
+            </div>
+            <div class="col-lg-4 col-md-6" style="margin-bottom: 5px;">
+                <div class="service-item bg-secondary text-center px-3" style="margin-top: 10px;">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                         <i class="fa -user-tie fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
@@ -195,14 +198,25 @@
                     <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
+            <div class="col-lg-4 col-md-6" style="margin-bottom: 5px;">
+                <div class="service-item bg-secondary text-center px-3" style="margin-top: 10px;">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                         <i class="fa -chart-pie fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
                     </div>
-                    <h5 class="mb-3">Web design and Development</h5>
-                    <p class="mb-0">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices.</p>
-                    <a href="html/services/web-design-and-dev.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                    <h5 class="mb-3">Business & Technology Advisory</h5>
+                    <p class="mb-0">Many of our clients come to us saying they need a specific type of system only to find out that it won’t solve their problem. We offer clients business technology advice to identify their needs and the best solution to reach their end goal.</p>
+                    
+                    <a href="html/services/Business-&-technology-Advisory.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-secondary text-center px-3" style="margin-top: 10px;">
+                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <i class="fa -chart-line fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
+                    </div>
+                    <h5 class="mb-3">Organizational Change Management</h5>
+                    <p class="mb-0">New or improved technology is meaningless unless it is accepted by an organization's employees. We assist customers in overcoming change resistance, mapping out future roles and duties, and ensuring a smooth transition.</p>
+                    <a href="html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -213,16 +227,6 @@
                     <h5 class="mb-3">Digital Marketing</h5>
                     <p class="mb-0">We specialize in designing and launch targeted Facebook, LinkedIn, Instagram, or Google ads, using an allocated Ads Budget, for increased engagement and a larger following, as and when the client advises, upon mutual agreement of the budget to be spent for such paid marketing.</p>
                     <a href="html/services/digital-marketing.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
-                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i class="fa -chart-line fa-2x"></i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
-                    </div>
-                    <h5 class="mb-3">Animation & 3D Product Designing</h5>
-                    <p class="mb-0">We design 3D designs with three-dimensional models based on a client's specifications and requirements. Animation as service is ideal for businesses of all sizes, from startups to well-established companies. We specialize in animation video services and offer high-quality illustrations for all your marketing and social media necessities.</p>
-                    <a href="html/services/animation-and-3d-product.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -245,18 +249,6 @@
                     <a href="html/services/it-consulting.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-3">
-                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i</i><img class="w-100" src="img/Marytech Logo_Red-03.png" alt="Image">
-                    </div>
-                    <h5 class="mb-3">Search Engine Optimization (SEO)</h5>
-                    <p class="mb-0">Get your website ranking higher in the search results, earn more qualified organic traffic and increase your website users. With our managed SEO services we offer On-Page and Off-Site customisable search engine optimisation campaigns that include a real-time dashboard so you can see the growth of your website.</p>
-                    <a href="html/services/search-engine-optimization.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Services End -->
 
 
@@ -354,13 +346,13 @@
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="">
-                                    <option selected>Web design and Development</option>
-                                    <option value="1">Digital Transformation Service</option>
-                                    <option value="2">Digital Marketing</option>
-                                    <option value="3">Animation & 3D Product Designing</option>
-                                    <option value="4">Mobile and web Application developments</option>
-                                    <option value="5">IT CONSULTING SERVICES </option>
-                                    <option value="5">Search Engine Optimization (SEO) </option>    
+                                    <option selected>Digital Transformation Service</option>
+                                    <option value="1">Business & Technology Advisory</option>
+                                    <option value="2">Organizational Change Management</option>
+                                    <option value="3">Digital Marketing</option>
+                                    <option value="4">Animation & 3D Product Designing</option>
+                                    <option value="5">Mobile and web Application developments</option>
+                                    <option value="6">IT CONSULTING SERVICES </option>  
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
@@ -373,7 +365,7 @@
             </div>
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="../img/Sir.png" style="object-fit: cover;">
                 </div>
             </div>
         </div>
