--- a/consultancy-website-template/html/contact.html
+++ b/consultancy-website-template/html/contact.html
@@ -90,8 +90,9 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="../index.html">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="">Contact</a>
             </div>
         </div>
@@ -142,7 +143,7 @@
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="https://www.google.com/maps/embed?pb=place/Harare/@-17.8165686,30.8920472,11z/data=!3m1!4b1!4m6!3m5!1s0x1931a4ee1bdddb35:0xa5143b9be5134f2f!8m2!3d-17.8216288!4d31.0492259!16zL20vMGZuZ2Y?authuser=0&entry=ttu
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
