--- a/consultancy-website-template/html/services/digital-transformation-services/software-implemetation.html
+++ b/consultancy-website-template/html/services/digital-transformation-services/software-implemetation.html
@@ -89,24 +89,109 @@
     <div class="container-fluid bg-dark p-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-white">Digital Transformation Services</h1>
+                <h1 class="display-4 text-white">software-implementation</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="./digital-strategy.html">Digital Strategy</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="./software-selection.html">Software Selection</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="./software-implemetation.html">Software Implementation</a>
+                <i class="far fa-award text-primary px-2"></i>
+                <a href="./software-selection.html">Software-selection</a>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Digital marketing information start-->
-    <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
+    <!-- Software-implementation information start-->
+    <!-- <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
         SOFTWARE IMPLEMENTATION INFO HERE... <br>
         <a href="../digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To Digital Transformation Services</a>
         <a href="../../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br>
+    </div> -->
+    <!-- software-implementation information end-->
+
+    <!-- Quote Start -->
+<div class="container-fluid bg-secondary px-0" id="quote-form">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Digital Strategy</h1>
+            <p class="mb-4">With the abundance of possibilities and uncertainties associated with large-scale digital transformations, many businesses or organisations are unsure where to begin with their digital plans. We at Marytechenock Solutions are skilled consultants when it comes to advising our customers on which solution to pursue, whether cloud or on-premise, system architecture, new technologies, supply chain and business process optimisation, and more. <h5 class="text-black text-lower Case"></h5>We know that there is no one-size-fits-all answer. That is why we design individual roadmaps for each of our customers to help them wherever they are and wherever they are going.</p>
+        </div>
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/what 3.jpg" style="object-fit: cover;">
+            </div>
+        </div>
     </div>
-    <!-- Digital marketing information end-->
+</div>
+<div class="container-fluid bg-secondary px-0" id="quote-form" style="margin-top: 30px;">
+    <div class="row g-0">
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/what 3.jpg" style="object-fit: cover;">
+            </div>
+        </div>
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Digital Strategy</h1>
+            <p class="mb-4">With the abundance of possibilities and uncertainties associated with large-scale digital transformations, many businesses or organisations are unsure where to begin with their digital plans. We at Marytechenock Solutions are skilled consultants when it comes to advising our customers on which solution to pursue, whether cloud or on-premise, system architecture, new technologies, supply chain and business process optimisation, and more. <h5 class="text-black text-lower Case"></h5>We know that there is no one-size-fits-all answer. That is why we design individual roadmaps for each of our customers to help them wherever they are and wherever they are going.</p>
+        </div>
+        
+    </div>
+</div>
+
+</div>
+<div class="col-lg-6">
+    <div class="left-ab">
+        <img class="img-fluid rounded mb-4" src="images/mission-img.jpg" alt="" />
+    </div>
+</div>
+</div>
+        <!-- Quote Start -->
+<div class="container-fluid bg-secondary px-0" id="quote-form" style="margin-top: 60px;">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Request A Free Quote</h1>
+            <p class="mb-4">MARYTECHENOCK SOLUTIONS is an all-in-one technology partner that can help you transform even the most ambitious IT goals into game-changing outcomes. So go ahead. Be ambitious. Do you need guidance on which service model to go for? 
+Get a free consultation from one of our in-house experts to learn the most suitable solution for your business needs.</p>
+            <form>
+                <div class="row gx-3">
+                    <div class="col-6">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
+                            <label for="form-floating-1">Full Name</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
+                            <label for="form-floating-2">Email address</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-floating">
+                            <select class="form-select" id="floatingSelect" aria-label="">
+                                <option selected>Digital Transformation Service</option>
+                                <option value="1">Business & Technology Advisory</option>
+                                <option value="2">Organizational Change Management</option>
+                                <option value="3">Digital Marketing</option>
+                                <option value="4">Animation & 3D Product Designing</option>
+                                <option value="5">Mobile and web Application developments</option>
+                                <option value="6">IT CONSULTING SERVICES </option>  
+                            </select>
+                            <label for="floatingSelect">Select A Service</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary w-100 h-100" type="submit">Request A Free Quote</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <img class="position-absolute w-100 h-100" src="../../../img/quotes.jpg" style="object-fit: cover;">
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Quote End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
