--- a/consultancy-website-template/html/services/mobile-and-web-app-dev.html
+++ b/consultancy-website-template/html/services/mobile-and-web-app-dev.html
@@ -90,17 +90,16 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Mobile and Web Application Development</h1>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="digital-transformation.html">Digital Transformation</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="web-design-and-dev.html">Web Design and Development</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="animation-and-3d-product.html">Animation and 3D Product Designing</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
+                <a href="Business-&-technology-Advisory.html">business-&-technology-Advisory</a>
+                <i class="far fa-award text-primary px-2"></i>
+                <a href="organisational-change-management.html">organisational-change-management</a>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="digital-marketing.html">Digital Marketing</a>
-                <i class="far fa-square text-primary px-2"></i>
+                <i class="far fa-award text-primary px-2"></i>
                 <a href="it-consulting.html">IT Consulting</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="search-engine-optimization.html">Search Engine Optimization</a>
             </div>
         </div>
     </div>
