--- a/consultancy-website-template/html/about.html
+++ b/consultancy-website-template/html/about.html
@@ -58,7 +58,10 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <img class="logo w-100" src="../img/Image1.jpeg" alt="Image">
+        <a href="../index.html">
+            <img class="logo w-100" src="../img/Image1.jpeg" alt="Image">
+        </a>
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
