--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -59,7 +59,9 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <img class="logo w-100" src="img/Image1.jpeg" alt="Image">
+        <a href="index.html">
+            <img class="logo w-100" src="img/Image1.jpeg" alt="Image">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -453,7 +455,7 @@
     <!-- Blog Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Latest Blog Post</h1>
+            <h1 class="display-5 mb-0">MARYTECHECNOCK ACADEMY</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
@@ -464,16 +466,16 @@
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <span>Get</span>
+                            <h5 class="text-uppercase m-0">Certified</h4>
+                            <span>with Us</span>
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
                             <div class="d-flex mb-2">
-                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Professional</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Certification</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h5" href="">Internet of things (IOT).</a>
                         </div>
                     </div>
                 </div>
@@ -485,16 +487,16 @@
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <span>Get</span>
+                            <h5 class="text-uppercase m-0">Certified</h5>
+                            <span>with us</span>
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
                             <div class="d-flex mb-2">
-                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Professional</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Certification</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h5" href="">Certified Cloud Systems Professional</a>
                         </div>
                     </div>
                 </div>
@@ -506,16 +508,16 @@
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <span>Starts</span>
+                            <h5 class="text-uppercase m-0">Jan</h4>
+                            <span>2024</span>
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
                             <div class="d-flex mb-2">
-                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Professional</small>
+                                <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Certification</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h5" href=""> Certified Data Scientiest</a>
                         </div>
                     </div>
                 </div>
