Index (marytechenock Academy)
i have uploaded pictures on the courses

--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -462,7 +462,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                        <img class="img-fluid" src="img/Modern Watch Instagram Post-4.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -483,7 +483,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-2.jpg" alt="">
+                        <img class="img-fluid" src="img/Modern Watch Instagram Post-2.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -504,7 +504,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-3.jpg" alt="">
+                        <img class="img-fluid" src="img/Modern Watch Instagram Post-3.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
